--- a/index.html
+++ b/index.html
@@ -17,66 +17,72 @@
         <header>
         </header>
         <!-- ================ MAIN ================ -->
-        <main class="container-fluid">
+        <main>
             <!-- ================ HOME ================ -->
-            <section id="home" class="no-fluid row align-items-center">
-                <div class="col-12">
-                    <img class="responsive" src="public/img/typography_placeholder.png" alt="Hi, My Name is Dee Reddy">
-                </div>
+            <section id="home" class="">
+                <div class="row no-fluid full-height align-items-center">
+                    <div class="col-12">
+                        <img class="responsive" src="public/img/typography_placeholder.png" alt="Hi, My Name is Dee Reddy">
+                    </div>
+                </div> <!-- /no-fluid row -->
             </section> <!-- /#home -->
 
-            <!-- ================ ABOUT ================ -->
-            <section id="about" class="row">
-                <div class="col-4 text-center">
-                    ABOUT
-                </div>
-                <div class="col-4 text-center">
-                    <h1>Header 1</h1>
-                    <h2>Header 2</h2>
-                    <h3>Header 3</h3>
-                    <h4>Header 4</h4>
-                    <h5>Header 5</h5>
-                    <h6>Header 6</h6>
-
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
-                    Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
-                    Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
-                    ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis,
-                    pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis.
-                    Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero
-                    in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada
-                    arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                    In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
-                </div>
-                <div class="col-4 text-center">
-                    <a href="#">testing the links</a>
-                </div>
-            </section> <!-- /#about -->
-
             <!-- ================ PORTFOLIO ================ -->
-            <section id="portfolio">
-                <div class="row">
+            <section id="portfolio" class="">
+                <div class="row no-fluid">
                     <div class="col-12 text-center">
                         PORTFOLIO
                     </div>
-                </div>
-                <div class="row">
+                </div> <!-- /no-fluid row -->
+                <div class="row no-fluid">
                     <ul class="portfolio-tiles">
-                        <li>abc2</li>
-                        <li>more</li>
-                        <li>abc</li>
+                        <li>list-item-one</li>
+                        <li>list-item-two</li>
+                        <li>list-item-three-aasdfasdfasdfasdfasdf</li>
                     </ul>
-                </div>
+                </div> <!-- /no-fluid row -->
             </section> <!-- /#portfolio -->
 
+            <!-- ================ ABOUT ================ -->
+            <section id="about" class="container-fluid">
+                <div class="row">
+                    <div class="col-4 text-center">
+                        ABOUT
+                    </div>
+                    <div class="col-4 text-center">
+                        <h1>Header 1</h1>
+                        <h2>Header 2</h2>
+                        <h3>Header 3</h3>
+                        <h4>Header 4</h4>
+                        <h5>Header 5</h5>
+                        <h6>Header 6</h6>
+
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
+                        Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
+                        Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
+                        ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis,
+                        pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis.
+                        Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero
+                        in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada
+                        arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
+                    </div>
+                    <div class="col-4 text-center">
+                        <a href="#">testing the links</a>
+                    </div>
+                </div> <!-- /.row -->
+            </section> <!-- /#about -->
+
             <!-- ================ CONTACT ================ -->
-            <section id="contact" class="row">
-                <div class="col-12 text-center">
-                    CONTACT
-                </div>
+            <section id="contact" class="container-fluid">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        CONTACT
+                    </div>
+                </div> <!-- /.row -->
             </section> <!-- /#contact -->
-        </main> <!-- /#container-fluid -->
+        </main>
 
 
     </div> <!-- /#boddy-wrapper -->
