--- a/index.html
+++ b/index.html
@@ -20,27 +20,34 @@
         <main>
             <!-- ================ HOME ================ -->
             <section id="home" class="">
-                <div class="row no-fluid full-height align-items-center">
+                <div class="row-no-fluid full-height align-items-center">
                     <div class="col-12">
                         <img class="responsive" src="public/img/typography_placeholder.png" alt="Hi, My Name is Dee Reddy">
                     </div>
-                </div> <!-- /no-fluid row -->
+                </div> <!-- /row-no-fluid row -->
             </section> <!-- /#home -->
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
-                <div class="row no-fluid">
+                <div class="row-no-fluid">
                     <div class="col-12 text-center">
                         PORTFOLIO
                     </div>
-                </div> <!-- /no-fluid row -->
-                <div class="row no-fluid">
-                    <ul class="portfolio-tiles">
-                        <li>list-item-one</li>
-                        <li>list-item-two</li>
-                        <li>list-item-three-aasdfasdfasdfasdfasdf</li>
-                    </ul>
-                </div> <!-- /no-fluid row -->
+                </div> <!-- /row-no-fluid row -->
+
+                <div class="row-no-fluid portfolio-tiles justify-space-around" data-gutter="10%" style="border: 2px solid greenyellow">
+                    <div>
+                        <img src="public/img/placeholder_portfolio_1.png">
+                    </div>
+                    <div>
+                        <img src="public/img/placeholder_portfolio_2.png">
+                    </div>
+                    <div>
+                        <img src="public/img/placeholder_portfolio_3.png">
+                    </div>
+                </div> <!-- /.portfolio-tiles ro-no-fluid -->
+
+
             </section> <!-- /#portfolio -->
 
             <!-- ================ ABOUT ================ -->
@@ -56,17 +63,18 @@
                         <h4>Header 4</h4>
                         <h5>Header 5</h5>
                         <h6>Header 6</h6>
-
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
-                        Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
-                        Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
-                        ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis,
-                        pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis.
-                        Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero
-                        in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada
-                        arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                        In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
+                            Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
+                            Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
+                            ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis,
+                            pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis.
+                            Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero
+                            in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada
+                            arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                            In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
+                        </p>
                     </div>
                     <div class="col-4 text-center">
                         <a href="#">testing the links</a>
