--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
-                <div class="row-no-fluid">
-                    <div class="col-12 text-center">
-                        PORTFOLIO
+                <div class="row-no-fluid responsive title" style="height: 4rem; width: 74%;">
+                    <div class="col-4">
+                        <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
+                    </div>
+                    <div class="col-4 text-center">
+                        <h3>Recent Works</h3>
+                    </div>
+                    <div class="col-4">
+                        <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
                     </div>
                 </div> <!-- /row-no-fluid row -->
 
-                <div class="row-no-fluid portfolio-tiles justify-space-around" data-gutter="10%" style="border: 2px solid greenyellow">
+                <div class="row-no-fluid portfolio-tiles justify-space-between responsive">
                     <div>
                         <img src="public/img/placeholder_portfolio_1.png">
                     </div>
