feat: Finish portfolio tiles

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
+
+                <!-- Title -->
                 <div class="row-no-fluid responsive title" style="height: 4rem; width: 74%;">
                     <div class="col-4">
                         <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
@@ -41,16 +43,41 @@
                     </div>
                 </div> <!-- /row-no-fluid row -->
 
+                <!-- Portfolio Tiles -->
                 <div class="row-no-fluid portfolio-tiles justify-space-between responsive">
-                    <div>
+                    <figure>
                         <img src="public/img/placeholder_portfolio_1.png">
-                    </div>
-                    <div>
+                        <figcaption>
+                            <h4>
+                                Company X
+                            </h4>
+                            <p>
+                                Branding and Website
+                            </p>
+                        </figcaption>
+                    </figure>
+                    <figure>
                         <img src="public/img/placeholder_portfolio_2.png">
-                    </div>
-                    <div>
+                        <figcaption>
+                            <h4>
+                                Company Y
+                            </h4>
+                            <p>
+                                Branding and Website
+                            </p>
+                        </figcaption>
+                    </figure>
+                    <figure>
                         <img src="public/img/placeholder_portfolio_3.png">
-                    </div>
+                        <figcaption>
+                            <h4>
+                                Company Z
+                            </h4>
+                            <p>
+                                Branding and Website
+                            </p>
+                        </figcaption>
+                    </figure>
                 </div> <!-- /.portfolio-tiles ro-no-fluid -->
 
 
