style: Minor revisions.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 Company Y
                             </h4>
                             <p>
-                                Branding and Website
+                                UX/UI and Branding
                             </p>
                         </figcaption>
                     </figure>
@@ -74,7 +74,7 @@
                                 Company Z
                             </h4>
                             <p>
-                                Branding and Website
+                                Back-end project
                             </p>
                         </figcaption>
                     </figure>
