fix: Make resizing tiles.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div> <!-- /row-no-fluid row -->
 
                 <!-- Portfolio Tiles -->
-                <div class="row-no-fluid portfolio-tiles justify-space-between responsive">
+                <div class="portfolio-tiles responsive">
                     <figure>
                         <img src="public/img/placeholder_portfolio_1.png">
                         <figcaption>
