feat: Add second row of tiles.

--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
                 </div> <!-- /row-no-fluid row -->
 
                 <!-- Portfolio Tiles -->
-                <div class="portfolio-tiles responsive">
+
+                <!-- portfolio-row -->
+                <div class="portfolio-row responsive">
                     <figure>
                         <img src="public/img/placeholder_portfolio_1.png">
                         <figcaption>
                             <h4>
-                                Company X
+                                Image Sharing App
                             </h4>
                             <p>
-                                Branding and Website
+                                Flask app
                             </p>
                         </figcaption>
                     </figure>
@@ -60,10 +62,10 @@
                         <img src="public/img/placeholder_portfolio_2.png">
                         <figcaption>
                             <h4>
-                                Company Y
+                                Conference Central
                             </h4>
                             <p>
-                                UX/UI and Branding
+                                Back-end
                             </p>
                         </figcaption>
                     </figure>
@@ -71,14 +73,51 @@
                         <img src="public/img/placeholder_portfolio_3.png">
                         <figcaption>
                             <h4>
-                                Company Z
+                                AIAI
                             </h4>
                             <p>
-                                Back-end project
+                                Website revision
                             </p>
                         </figcaption>
                     </figure>
-                </div> <!-- /.portfolio-tiles ro-no-fluid -->
+                </div> <!-- /.portfolio-row -->
+
+                <!-- portfolio-row -->
+                <div class="portfolio-row responsive">
+                    <figure>
+                        <img src="public/img/placeholder_portfolio_1.png">
+                        <figcaption>
+                            <h4>
+                                Case Study: e-commerce site
+                            </h4>
+                            <p>
+                                UI and website
+                            </p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="public/img/placeholder_portfolio_2.png">
+                        <figcaption>
+                            <h4>
+                                COUCH
+                            </h4>
+                            <p>
+                                Website
+                            </p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="public/img/placeholder_portfolio_3.png">
+                        <figcaption>
+                            <h4>
+                                COUCH
+                            </h4>
+                            <p>
+                                Website
+                            </p>
+                        </figcaption>
+                    </figure>
+                </div> <!-- /.portfolio-row -->
 
 
             </section> <!-- /#portfolio -->
