feat: Add footer.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="src/stylesheets/main.css">
+
+    <!-- Ionic icons -->
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
     <div id="body-wrapper">
@@ -167,8 +170,24 @@
 
     </div> <!-- /#boddy-wrapper -->
     <!-- ================ FOOTER ================ -->
-    <footer>
-        Footer
+
+    <footer class="container-fluid">
+        <div class="row align-items-center">
+            <div class="col-4 text-center" data-footer="&copy; 2016 Dee Reddy">&copy; 2016 Dee Reddy</div>
+            <div>
+                <a href="mailto:deesus@yandex.com" target="_blank">
+                    <i class="ion-ios-email-outline" style="font-size: 2.9rem;"></i>
+                </a>
+                &nbsp;&nbsp;&nbsp;
+                <a href="https://www.linkedin.com/in/deesus" target="_blank">
+                    <i class="ion-social-linkedin-outline"></i>
+                </a>
+                &nbsp;&nbsp;&nbsp;
+                <a href="https://github.com/deesus" target="_blank">
+                    <i class="ion-social-octocat"></i>
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
