refactor: Update footer styles.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <div id="body-wrapper">
         <!-- ================ HEADER ================ -->
         <header>
+            <div class="logo">
+
+            </div>
+            <nav>
+
+            </nav>
         </header>
         <!-- ================ MAIN ================ -->
         <main>
@@ -173,8 +179,9 @@
 
     <footer class="container-fluid">
         <div class="row align-items-center">
-            <div class="col-4 text-center" data-footer="&copy; 2016 Dee Reddy">&copy; 2016 Dee Reddy</div>
-            <div>
+            <div class="col-1"></div>
+            <div class="col-4" data-footer="&copy; 2016 Dee Reddy">&copy; 2016 Dee Reddy</div>
+            <div class="col-6 text-end">
                 <a href="mailto:deesus@yandex.com" target="_blank">
                     <i class="ion-ios-email-outline" style="font-size: 2.9rem;"></i>
                 </a>
