refactor: Change row, container, container-row semantics.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <div id="body-wrapper">
         <!-- ================ HEADER ================ -->
-        <header class="container-fluid">
-            <nav class="row align-items-center">
+        <header class="container">
+            <nav class="container-row align-items-center">
                 <div class="col-1"></div>
                 <div class="col-4 logo">
                     <img src="public/img/placeholder_logo.png" alt="signature logo">
@@ -35,18 +35,18 @@
         <main>
             <!-- ================ HOME ================ -->
             <section id="home" class="">
-                <div class="row-no-fluid full-height align-items-center">
+                <div class="row full-height align-items-center">
                     <div class="col-12">
                         <img class="responsive" src="public/img/typography_placeholder.png" alt="Hi, My Name is Dee Reddy">
                     </div>
-                </div> <!-- /row-no-fluid row -->
+                </div> <!-- /.row -->
             </section> <!-- /#home -->
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
 
                 <!-- Title -->
-                <div class="row-no-fluid responsive title" style="height: 4rem; width: 74%;">
+                <div class="row responsive title" style="height: 4rem; width: 74%;">
                     <div class="col-4">
                         <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
                     </div>
@@ -56,7 +56,7 @@
                     <div class="col-4">
                         <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
                     </div>
-                </div> <!-- /row-no-fluid row -->
+                </div> <!-- /.row -->
 
                 <!-- Portfolio Tiles -->
 
@@ -138,8 +138,8 @@
             </section> <!-- /#portfolio -->
 
             <!-- ================ ABOUT ================ -->
-            <section id="about" class="container-fluid">
-                <div class="row">
+            <section id="about" class="container">
+                <div class="container-row">
                     <div class="col-4 text-center">
                         ABOUT
                     </div>
@@ -166,16 +166,16 @@
                     <div class="col-4 text-center">
                         <a href="#">testing the links</a>
                     </div>
-                </div> <!-- /.row -->
+                </div> <!-- /.container-row -->
             </section> <!-- /#about -->
 
             <!-- ================ CONTACT ================ -->
-            <section id="contact" class="container-fluid">
-                <div class="row">
+            <section id="contact" class="container">
+                <div class="container-row">
                     <div class="col-12 text-center">
                         CONTACT
                     </div>
-                </div> <!-- /.row -->
+                </div> <!-- /.container-row -->
             </section> <!-- /#contact -->
         </main>
 
@@ -183,8 +183,8 @@
     </div> <!-- /#boddy-wrapper -->
     <!-- ================ FOOTER ================ -->
 
-    <footer class="container-fluid">
-        <div class="row align-items-center">
+    <footer class="container">
+        <div class="container-row align-items-center">
             <div class="col-1"></div>
             <div class="col-4" data-footer="&copy; 2016 Dee Reddy">&copy; 2016 Dee Reddy</div>
             <div class="col-6 text-end">
