refactor: Add thumbnails. Update portfolio.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <img src="public/img/placeholder_logo.png" alt="signature logo">
                 </div>
                 <div class="col-6 text-end">
-                    <button>about</button>
-                    <button>portfolio</button>
-                    <button>contact</button>
+                    <a href="#about"><button>about</button></a>
+                    <a href="#portfolio"><button>portfolio</button></a>
+                    <a href="#contact"><button>contact</button></a>
                 </div>
             </nav>
         </header>
@@ -63,35 +63,35 @@
                 <!-- portfolio-row -->
                 <div class="portfolio-row responsive">
                     <figure>
-                        <img src="public/img/placeholder_portfolio_1.png">
+                        <img src="public/img/thumbnails/image_sharing_thumb.png">
                         <figcaption>
                             <h4>
                                 Image Sharing App
                             </h4>
                             <p>
-                                Flask app
+                                UI; Flask back-end; SQL Database
                             </p>
                         </figcaption>
                     </figure>
                     <figure>
-                        <img src="public/img/placeholder_portfolio_2.png">
-                        <figcaption>
-                            <h4>
-                                Conference Central
-                            </h4>
-                            <p>
-                                Back-end
-                            </p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="public/img/placeholder_portfolio_3.png">
+                        <img src="public/img/thumbnails/aiai_thumb.png">
                         <figcaption>
                             <h4>
                                 AIAI
                             </h4>
                             <p>
-                                Website revision
+                                Website Revision
+                            </p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="public/img/thumbnails/couch_thumb.png">
+                        <figcaption>
+                            <h4>
+                                COUCH
+                            </h4>
+                            <p>
+                                Website
                             </p>
                         </figcaption>
                     </figure>
@@ -100,21 +100,10 @@
                 <!-- portfolio-row -->
                 <div class="portfolio-row responsive">
                     <figure>
-                        <img src="public/img/placeholder_portfolio_1.png">
+                        <img src="public/img/thumbnails/iron_post_thumb.png">
                         <figcaption>
                             <h4>
-                                Case Study: e-commerce site
-                            </h4>
-                            <p>
-                                UI and website
-                            </p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="public/img/placeholder_portfolio_2.png">
-                        <figcaption>
-                            <h4>
-                                COUCH
+                                Iron Post
                             </h4>
                             <p>
                                 Website
@@ -122,13 +111,24 @@
                         </figcaption>
                     </figure>
                     <figure>
-                        <img src="public/img/placeholder_portfolio_3.png">
+                        <img src="public/img/thumbnails/cc_thumb.png">
                         <figcaption>
                             <h4>
-                                COUCH
+                                Conference Central
                             </h4>
                             <p>
-                                Website
+                                Back-end; Google App Engine
+                            </p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="public/img/thumbnails/swiss_tournament_thumb.png">
+                        <figcaption>
+                            <h4>
+                                Swiss Tournament Planner
+                            </h4>
+                            <p>
+                                SQL Database
                             </p>
                         </figcaption>
                     </figure>
