--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Dee Reddy">
     <meta charset="UTF-8">
 
+    <link rel="shortcut icon" type="image/x-icon" href="public/img/icon.ico">
     <!-- Styles -->
     <link rel="stylesheet" href="src/stylesheets/main.css">
 
@@ -17,19 +18,19 @@
 <body>
     <div id="body-wrapper">
         <!-- ================ HEADER ================ -->
-        <header class="container">
-            <nav class="container-row align-items-center">
-                <div class="col-1"></div>
-                <div class="col-4 logo">
-                    <img src="public/img/placeholder_logo.png" alt="signature logo">
-                </div>
-                <div class="col-6 text-end">
-                    <a href="#about"><button>about</button></a>
-                    <a href="#portfolio"><button>portfolio</button></a>
-                    <a href="#contact"><button>contact</button></a>
-                </div>
-            </nav>
-        </header>
+        <!--<header class="container">-->
+            <!--<nav class="container-row align-items-center">-->
+                <!--<div class="col-1"></div>-->
+                <!--<div class="col-4 logo">-->
+                    <!--<img src="public/img/placeholder_logo.png" alt="signature logo">-->
+                <!--</div>-->
+                <!--<div class="col-6 text-end">-->
+                    <!--<a href="#about"><button>about</button></a>-->
+                    <!--<a href="#portfolio"><button>portfolio</button></a>-->
+                    <!--<a href="#contact"><button>contact</button></a>-->
+                <!--</div>-->
+            <!--</nav>-->
+        <!--</header>-->
 
         <!-- ================ MAIN ================ -->
         <main>
@@ -51,7 +52,7 @@
                         <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
                     </div>
                     <div class="col-4 text-center">
-                        <h3>Recent Works</h3>
+                        <h3>Some of my Works</h3>
                     </div>
                     <div class="col-4">
                         <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
@@ -138,18 +139,25 @@
             </section> <!-- /#portfolio -->
 
             <!-- ================ ABOUT ================ -->
-            <section id="about" class="container">
-                <div class="container-row">
-                    <div class="col-4 text-center">
-                        ABOUT
+            <section id="about" class="">
+
+                <!-- Title -->
+                <div class="row responsive title" style="height: 4rem; width: 74%;">
+                    <div class="col-4">
+                        <!-- gutter -->
                     </div>
                     <div class="col-4 text-center">
-                        <h1>Header 1</h1>
-                        <h2>Header 2</h2>
-                        <h3>Header 3</h3>
-                        <h4>Header 4</h4>
-                        <h5>Header 5</h5>
-                        <h6>Header 6</h6>
+                        <h3>About</h3>
+                    </div>
+                    <div class="col-4">
+                        <!-- gutter -->
+                    </div>
+                </div> <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-4 text-center">
+                    </div>
+                    <div class="col-4 text-center">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
                             Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
@@ -164,7 +172,6 @@
                         </p>
                     </div>
                     <div class="col-4 text-center">
-                        <a href="#">testing the links</a>
                     </div>
                 </div> <!-- /.container-row -->
             </section> <!-- /#about -->
@@ -190,7 +197,7 @@
             <div class="col-6 text-end">
                 <!-- TODO: replace `;nbsp` with padding/maring -->
                 <a href="mailto:deesus@yandex.com" target="_blank">
-                    <i class="ion-ios-email-outline" style="font-size: 2.9rem;"></i>
+                    <i class="ion-ios-email-outline"></i>
                 </a>
                 &nbsp;&nbsp;&nbsp;
                 <a href="https://www.linkedin.com/in/deesus" target="_blank">
