--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <section id="home" class="">
                 <div class="row full-height align-items-center">
                     <div class="col-12">
-                        <img class="responsive" src="public/img/typography_placeholder.png" alt="Hi, My Name is Dee Reddy">
+                        <div class="typography">
+                            <img class="responsive" src="public/img/sillouete.png" alt="Hi, My Name is Dee Reddy" style="width: 358px; height: auto;">
+                        </div>
                     </div>
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
@@ -210,5 +212,10 @@
             </div>
         </div>
     </footer>
+
+    <!-- jQuery CDN -->
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <!-- custom JS -->
+    <script src="public/js/scripts.js"></script>
 </body>
 </html>
