feat: Add gradient.

--- a/index.html
+++ b/index.html
@@ -32,18 +32,24 @@
             <!--</nav>-->
         <!--</header>-->
 
+        <!--<div class="triangle-center">-->
+            <!--<svg class="triangle">-->
+                <!--<polygon points="0,0 50,0 25,26"></polygon>-->
+            <!--</svg>-->
+        <!--</div>-->
         <!-- ================ MAIN ================ -->
         <main>
             <!-- ================ HOME ================ -->
             <section id="home" class="">
                 <div class="row full-height align-items-center">
-                    <div class="col-12">
-                        <div class="typography">
-                            <img class="responsive" src="public/img/sillouete.png" alt="Hi, My Name is Dee Reddy" style="width: 358px; height: auto;">
-                        </div>
+                    <div class="col-12 text-center">
+                        <h1>Amazing</h1>
                     </div>
                 </div> <!-- /.row -->
+
+
             </section> <!-- /#home -->
+
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
