--- a/index.html
+++ b/index.html
@@ -17,39 +17,17 @@
 </head>
 <body>
     <div id="body-wrapper">
-        <!-- ================ HEADER ================ -->
-        <!--<header class="container">-->
-            <!--<nav class="container-row align-items-center">-->
-                <!--<div class="col-1"></div>-->
-                <!--<div class="col-4 logo">-->
-                    <!--<img src="public/img/placeholder_logo.png" alt="signature logo">-->
-                <!--</div>-->
-                <!--<div class="col-6 text-end">-->
-                    <!--<a href="#about"><button>about</button></a>-->
-                    <!--<a href="#portfolio"><button>portfolio</button></a>-->
-                    <!--<a href="#contact"><button>contact</button></a>-->
-                <!--</div>-->
-            <!--</nav>-->
-        <!--</header>-->
 
-        <!--<div class="triangle-center">-->
-            <!--<svg class="triangle">-->
-                <!--<polygon points="0,0 50,0 25,26"></polygon>-->
-            <!--</svg>-->
-        <!--</div>-->
         <!-- ================ MAIN ================ -->
         <main>
             <!-- ================ HOME ================ -->
             <section id="home" class="">
                 <div class="row full-height align-items-center">
-                    <div class="col-12 text-center">
-                        <h1>Amazing</h1>
+                    <div class="col-12" style="">
+                        <img src="public/img/paint_splatter_1000.png">
                     </div>
                 </div> <!-- /.row -->
-
-
             </section> <!-- /#home -->
-
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
@@ -57,18 +35,17 @@
                 <!-- Title -->
                 <div class="row responsive title" style="height: 4rem; width: 74%;">
                     <div class="col-4">
-                        <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
+                        <div class="div-line"></div>
                     </div>
                     <div class="col-4 text-center">
                         <h3>Some of my Works</h3>
                     </div>
                     <div class="col-4">
-                        <div style="width:100%; height:0; border-top: 1px #dddddd solid; border-bottom: 1px white solid;"></div>
+                        <div class="div-line"></div>
                     </div>
                 </div> <!-- /.row -->
 
                 <!-- Portfolio Tiles -->
-
                 <!-- portfolio-row -->
                 <div class="portfolio-row responsive">
                     <figure>
