--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
             <!-- ================ HOME ================ -->
             <section id="home" class="">
                 <div class="row full-height align-items-center">
-                    <div class="col-12" style="">
-                        <img src="public/img/paint_splatter_1000.png">
+                    <div class="col-12">
+                        <img class="splatter" src="public/img/paint_splatter_1000.png">
                     </div>
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
-
                 <!-- Title -->
                 <div class="row responsive title" style="height: 4rem; width: 74%;">
                     <div class="col-4">
@@ -119,8 +118,6 @@
                         </figcaption>
                     </figure>
                 </div> <!-- /.portfolio-row -->
-
-
             </section> <!-- /#portfolio -->
 
             <!-- ================ ABOUT ================ -->
