refactor: Change home to svg image.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
         <main>
             <!-- ================ HOME ================ -->
             <section id="home" class="">
-                <div class="row full-height align-items-center">
-                    <div class="col-12">
-                        <img class="splatter" src="public/img/paint_splatter_1000.png">
-                    </div>
+                <div class="row full-height justify-center align-items-end">
+                    <img src="public/img/home_splash.svg" class="home-splash">
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
 
@@ -193,8 +191,6 @@
         </div>
     </footer>
 
-    <!-- jQuery CDN -->
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <!-- custom JS -->
     <script src="public/js/scripts.js"></script>
 </body>
