--- a/index.html
+++ b/index.html
@@ -23,14 +23,86 @@
             <!-- ================ HOME ================ -->
             <section id="home" class="">
                 <div class="row full-height justify-center align-items-end">
-                    <img src="public/img/home_splash.svg" class="home-splash">
+                    <img src="public/img/home_splash.svg" class="splash-image">
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
+
+            <!-- ================ ABOUT ================ -->
+            <section id="about" class="">
+                <!-- line -->
+                <div class="row justify-center">
+                    <hr class="about-hr">
+                </div> <!-- row auto-margin -->
+
+                <!-- Title -->
+                <div class="row title" style="height: 4rem;">
+                    <div class="col-12 text-center">
+                        <h3>About</h3>
+                    </div>
+                </div> <!-- /.row -->
+
+                <!-- About List -->
+                <div id="about-list">
+
+                    <div class="row">
+                        <div class="col-5 flex-row justify-end">
+                            <figure>
+                                <img src="./public/img/placeholder_browser.svg">
+                            </figure>
+                        </div>
+                        <div class="col-4">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
+                                Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
+                                Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
+                                ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis,
+                                pulvinar a semper sed, adipiscing id dolor.
+                            </p>
+                        </div>
+                    </div> <!-- /.row -->
+
+                    <div class="row">
+                        <div class="col-5 flex-row justify-end">
+                            <figure>
+                                <img src="./public/img/placeholder_mobile.svg">
+                            </figure>
+                        </div>
+                        <div class="col-4">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
+                                Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
+                                Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
+                                ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                    </div> <!-- /.row -->
+
+                    <div class="row">
+                        <div class="col-5 flex-row justify-end">
+                            <figure>
+                                <img src="./public/img/placeholder_cloud.svg">
+                            </figure>
+                        </div>
+                        <div class="col-4">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
+                                Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
+                                Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
+                                ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                    </div> <!-- /.row -->
+
+                </div> <!-- #/about-list -->
+            </section> <!-- /#about -->
 
             <!-- ================ PORTFOLIO ================ -->
             <section id="portfolio" class="">
                 <!-- Title -->
-                <div class="row responsive title" style="height: 4rem; width: 74%;">
+                <div class="row auto-margin title" style="height: 4rem; width: 74%;">
                     <div class="col-4">
                         <div class="div-line"></div>
                     </div>
@@ -44,7 +116,7 @@
 
                 <!-- Portfolio Tiles -->
                 <!-- portfolio-row -->
-                <div class="portfolio-row responsive">
+                <div class="portfolio-row auto-margin">
                     <figure>
                         <img src="public/img/thumbnails/image_sharing_thumb.png">
                         <figcaption>
@@ -81,7 +153,7 @@
                 </div> <!-- /.portfolio-row -->
 
                 <!-- portfolio-row -->
-                <div class="portfolio-row responsive">
+                <div class="portfolio-row auto-margin">
                     <figure>
                         <img src="public/img/thumbnails/iron_post_thumb.png">
                         <figcaption>
@@ -117,44 +189,6 @@
                     </figure>
                 </div> <!-- /.portfolio-row -->
             </section> <!-- /#portfolio -->
-
-            <!-- ================ ABOUT ================ -->
-            <section id="about" class="">
-
-                <!-- Title -->
-                <div class="row responsive title" style="height: 4rem; width: 74%;">
-                    <div class="col-4">
-                        <!-- gutter -->
-                    </div>
-                    <div class="col-4 text-center">
-                        <h3>About</h3>
-                    </div>
-                    <div class="col-4">
-                        <!-- gutter -->
-                    </div>
-                </div> <!-- /.row -->
-
-                <div class="row">
-                    <div class="col-4 text-center">
-                    </div>
-                    <div class="col-4 text-center">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
-                            Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
-                            Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
-                            ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis,
-                            pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis.
-                            Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero
-                            in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada
-                            arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                            In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
-                        </p>
-                    </div>
-                    <div class="col-4 text-center">
-                    </div>
-                </div> <!-- /.container-row -->
-            </section> <!-- /#about -->
 
             <!-- ================ CONTACT ================ -->
             <section id="contact" class="container">
