feat: Re-insert header.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,25 @@
 
         <!-- ================ MAIN ================ -->
         <main>
+            <!-- ================ HEADER ================ -->
+            <header class="container">
+                <nav class="container-row align-items-center">
+                <div class="col-1"></div>
+                    <div class="col-4 logo">
+                        <img src="public/img/placeholder_logo.png" alt="signature logo">
+                    </div>
+                    <div class="col-6 text-end">
+                        <a href="#about"><button>about</button></a>
+                        <a href="#portfolio"><button>portfolio</button></a>
+                        <a href="#contact"><button>contact</button></a>
+                    </div>
+                </nav>
+            </header>
+
             <!-- ================ HOME ================ -->
             <section id="home" class="">
                 <div class="row full-height justify-center align-items-end">
-                    <img src="public/img/home_splash.svg" class="splash-image">
+                    <img src="public/img/splash_gray.svg" class="splash-image">
                 </div> <!-- /.row -->
             </section> <!-- /#home -->
 
