update: Update about section.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
             <!-- ================ HOME ================ -->
             <section id="home" class="">
+                <!-- Title -->
                 <div class="row full-height justify-center align-items-end">
                     <img src="public/img/splash_gray.svg" class="splash-image">
                 </div> <!-- /.row -->
@@ -47,7 +48,7 @@
                 <!-- line -->
                 <div class="row justify-center">
                     <hr class="about-hr">
-                </div> <!-- row auto-margin -->
+                </div> <!-- row -->
 
                 <!-- Title -->
                 <div class="row title" style="height: 4rem;">
@@ -59,25 +60,7 @@
                 <!-- About List -->
                 <div id="about-list">
 
-                    <div class="row">
-                        <div class="col-5 flex-row justify-end">
-                            <figure>
-                                <img src="./public/img/devices_250_blue.svg">
-                            </figure>
-                        </div>
-                        <div class="col-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
-                                Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
-                                Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
-                                ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis,
-                                pulvinar a semper sed, adipiscing id dolor.
-                            </p>
-                        </div>
-                    </div> <!-- /.row -->
-
-                    <div class="row">
+                    <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
                                 <img src="./public/img/placeholder_mobile.svg">
@@ -85,16 +68,32 @@
                         </div>
                         <div class="col-4">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
-                                Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
-                                Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
-                                ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Hi, my name is Dee Reddy. I'm a self-taught developer, currently residing in the Virginia/Maryland area.
+                                I'm a voracious learner -- whether that's reading about algorithm design or ancient philosophy,
+                                I am always looking to expand my understanding.
                             </p>
                         </div>
-                    </div> <!-- /.row -->
+                    </div> <!-- /.about-li -->
 
-                    <div class="row">
+                    <div class="about-li row">
+                        <div class="col-5 flex-row justify-end">
+                            <figure>
+                                <img src="./public/img/devices_250_blue.svg">
+                            </figure>
+                        </div>
+                        <div class="col-4">
+                            <p>
+                                My primary languages are Python and JavaScript. I develop on both front-end and server-side.
+                                I develop web apps with either Node/Express or the Python-based Flask framework.
+                                I'm also experienced in SQL and RDBMS.
+                            </p>
+                            <div class="skill-icons">
+                                <i class="ion-social-python"></i> Python <i class="ion-social-nodejs"></i> Node.js
+                            </div>
+                        </div>
+                    </div> <!-- /.about-li -->
+
+                    <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
                                 <img src="./public/img/placeholder_cloud.svg">
@@ -102,14 +101,15 @@
                         </div>
                         <div class="col-4">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris.
-                                Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
-                                Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim,
-                                ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                I develop responsive designs that work on all devices by using the latest HTML5 and CSS standards.
+                                As such, I prefer to find front-end solutions with CSS before relying on JS/jQuery.
+                                My approach is: plan, define, design, refine, and then deploy.
                             </p>
+                            <div class="skill-icons">
+                                <i class="ion-social-html5"></i> HTML5  <i class="ion-social-sass"></i> CSS/Sass <i class="ion-social-javascript"></i> JavaScript
+                            </div>
                         </div>
-                    </div> <!-- /.row -->
+                    </div> <!-- /.about-li -->
 
                 </div> <!-- #/about-list -->
             </section> <!-- /#about -->
