update: Add images.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/placeholder_mobile.svg">
+                                <img src="./public/img/test.svg">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -78,7 +78,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/devices_250_blue.svg">
+                                <img src="./public/img/code_laptop_200.svg">
                             </figure>
                         </div>
                         <div class="col-4">
@@ -96,7 +96,7 @@
                     <div class="about-li row">
                         <div class="col-5 flex-row justify-end">
                             <figure>
-                                <img src="./public/img/placeholder_cloud.svg">
+                                <img src="./public/img/devices_200_blue.svg">
                             </figure>
                         </div>
                         <div class="col-4">
